@@ -13,7 +13,7 @@ CaniNES supported mappers (iNES 1.0)
 | 80| . | 82| 83|===| 85| 86| 87| 88| . | 90| 91| 92| 93| . | 95|
 | . | . |---| . |===|101|===| . | . |105| . | . | . |===|===|111|
 |112|113|114|115| . |117|118|119| . |121|===| . | . | . | . | . |
-| . |===|===|===|132|133| . |===| . |137|138|139| . |141|142| . |
+| . |===|===|===|132|133| . |===|136|137|138|139| . |141|142| . |
 |144| . | . | . |148|149|150| . |152|153|154|155|156|157|158|159|
 |===|===| . | . | . | . | . | . |168| . | . | . |172|173| . | . |
 | . |177| . | . |180|===|182| . |184|185| . |187| . |189|190|191|
@@ -144,6 +144,7 @@ Full list
 121
 132
 133
+136
 137
 138
 139
