@@ -36,9 +36,6 @@ CaniNES known nonworking ROMs
 096 Oeka Kids - Anpanman to Oekaki Shiyou!! (Japan).nes
 097 Kaiketsu Yancha Maru (Japan).nes
 116 AV Mei Shao Nv Zhan Shi (Asia) (Unl).nes
-136 Mahjang Companion (Japan) (Hacker) (SA-002 3011 PCB) (Unl).nes
-136 Mahjong Trap - Si Cuan Ma Que (Asia) (Ja) (Unl).nes
-136 Wei Lai Xiao Zi - Joy Van Kid (Asia) (En) (Unl).nes
 143 Dancing Blocks (Asia) (Ja) (PAL) (Unl).nes
 143 Magical Mathematics (Asia) (Ja) (NTSC) (Unl).nes
 145 Sidewinder (Asia) (Ja) (Unl).nes
